# meaningfulness-papers

./: .gitignore  CITATION.cff  LICENSE  LICENSE-data  README.md  pyproject.toml  reproduce.sh
meaning-meaningfulness/: 2026ao.bib  AGENTS.md  (+19 more)
meaning-meaningfulness-empirical/: 2026ap.bib  AGENTS.md  CITATION.cff  CITATIONS.md  CONTRIBUTORS.yaml  CROSS_LANGUAGE_FAMILY_ROBUSTNESS_PHASE3_5B.md  CROSS_OPERATOR_EXTRACTION_RESULTS.md  CROSS_PAPER_P4_ISOMORPHISM.md  DATA_MANIFEST.yaml  GLOSSARY.md  ONTOLOGY.yaml  PHASE1_ANCHOR_VERIFICATION_2026-05-27.md  PHASE3_5A_RUSSIAN_RENDERING_PROTOCOL.md  PHASE3_5B_MULTI_LLM_OPERATOR_PROTOCOL.md  PHASE4_KAPPA_MEASUREMENT_2026-05-27.md  PROMPT_PURITY_PROTOCOL.md  PROVENANCE.yaml  README.md  RENDERING_FOCAL_PAIR_THIRD_PROSE.md  RENDERING_PA_PRACTITIONER.md  RENDERING_PB_ABSTRACT_RUSSIAN.md  RENDERING_PB_SUBSTACK_PRACTITIONER.md  RENDERING_PB_THEORY_RUSSIAN.md  SELF_APPLICATION_ISOMORPHISM_PB.md  SPINE.yaml  TWIN_PAIR_ISOMORPHISM_PB_FOCAL.md  TWIN_PAIR_ISOMORPHISM_PB_KBV.md  VALIDATION_CASE_PA_PRACTITIONER_GPT4_SPINE.yaml  VALIDATION_CASE_PA_PRACTITIONER_SPINE.yaml  VALIDATION_CASE_PB_FOCAL_EISENHARDT_MARTIN_SPINE.yaml  VALIDATION_CASE_PB_FOCAL_THIRD_GPT4_SPINE.yaml  VALIDATION_CASE_PB_FOCAL_THIRD_RENDERING_SPINE.yaml  VALIDATION_CASE_PB_FOCAL_ZOLLO_WINTER_SPINE.yaml  VALIDATION_CASE_PB_KBV_GRANT_SPINE.yaml  VALIDATION_CASE_PB_KBV_LIEBESKIND_SPINE.yaml  VALIDATION_CASE_PB_SECONDARY_PRECURSOR_TUSHMAN_OREILLY_SPINE.yaml  VALIDATION_CASE_PB_SELF_APPLICATION_GPT4_SPINE.yaml  VALIDATION_CASE_PB_SELF_APPLICATION_SPINE.yaml  paper.md  paper.yaml
(+49 files in other folders)
